--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 <h2> Yes We Do!</h2>
 
 <h3>My favorite is the chocolate maple bar.</h3>
+
+<h4>Mine is maple bar with bacon</h4>
 </body>
 </html>
